--- a/assets/index.less
+++ b/assets/index.less
@@ -34,7 +34,10 @@
     &-list {
       display: flex;
       position: relative;
-      transition: transform 0.3s;
+
+      // .@{tabs-prefix-cls}:not(.@{tabs-prefix-cls}-mobile) & {
+      //   transition: transform 0.3s;
+      // }
 
       &::after {
         content: '';
