--- a/assets/index.less
+++ b/assets/index.less
@@ -45,8 +45,15 @@
       }
     }
 
+    // >>>>>>>> Operations
+    &-operations {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      display: flex;
+    }
+
     &-more {
-      flex: none;
       background: rgba(255, 0, 0, 0.1);
     }
   }
@@ -54,7 +61,7 @@
   &-tab {
     border: 0;
     font-size: 20px;
-    background: transparent;
+    background: rgba(255, 255, 255, 0.5);
     margin: 0;
     padding: 8px 16px;
     outline: none;
