--- a/assets/index.less
+++ b/assets/index.less
@@ -52,7 +52,12 @@
     }
 
     &-more {
+      border: 1px solid blue;
       background: rgba(255, 0, 0, 0.1);
+    }
+    &-add {
+      border: 1px solid green;
+      background: rgba(0, 255, 0, 0.1);
     }
   }
 
