--- a/assets/position.less
+++ b/assets/position.less
@@ -51,6 +51,10 @@
       padding-right: 32px;
     }
 
+    .@{tabs-prefix-cls}-nav-wrap {
+      flex-direction: column;
+    }
+
     .@{tabs-prefix-cls}-ink-bar {
       width: 3px;
     }
@@ -61,6 +65,7 @@
 
     .@{tabs-prefix-cls}-nav {
       flex-direction: column;
+      min-width: 50px;
 
       &-list {
         flex-direction: column;
