fix additional moving

--- a/assets/index.less
+++ b/assets/index.less
@@ -40,6 +40,12 @@
     // >>>>>>>> Operations
     &-operations {
       display: flex;
+
+      &-hidden {
+        position: absolute;
+        visibility: hidden;
+        pointer-events: none;
+      }
     }
 
     &-more {
