--- a/assets/index.less
+++ b/assets/index.less
@@ -67,6 +67,7 @@
     outline: none;
     cursor: pointer;
     position: relative;
+    font-weight: lighter;
 
     &-with-remove {
       padding-right: 32px;
@@ -85,6 +86,11 @@
 
     &:focus {
       background: rgba(0, 0, 255, 0.1);
+    }
+
+    &-active {
+      padding-left: 30px;
+      font-weight: bolder;
     }
   }
 
