fix: can't scroll when vertical mode in safari

--- a/assets/index.less
+++ b/assets/index.less
@@ -65,6 +65,7 @@
 
     &-list {
       display: flex;
+      flex: 1 0 auto;
       position: relative;
       transition: transform 0.3s;
     }
@@ -72,6 +73,7 @@
     // >>>>>>>> Operations
     &-operations {
       display: flex;
+      flex: 1 0 auto;
 
       &-hidden {
         position: absolute;
