--- a/assets/panels.less
+++ b/assets/panels.less
@@ -5,17 +5,22 @@
     &-holder {
       flex: auto;
     }
+    position: relative;
 
-    display: flex;
+    // display: flex;
     width: 100%;
 
-    &-animated {
-      transition: margin 0.3s;
-    }
+    // &-animated {
+    //   transition: margin 0.3s;
+    // }
   }
 
   &-tabpane {
-    width: 100%;
-    flex: none;
+    // flex: none;
+    // width: 100%;
+
+    &-hidden {
+      display: none;
+    }
   }
 }
