--- a/assets/position.less
+++ b/assets/position.less
@@ -52,7 +52,8 @@
       flex-direction: column;
       min-width: 50px;
 
-      &-list, &-operations {
+      &-list,
+      &-operations {
         flex: 1 0 auto; // fix safari scroll problem
         flex-direction: column;
       }
